--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -31,7 +31,7 @@ jobs:
                                   sudo apt-get install libncurses5 libbz2-1.0 libz1 valgrind
                                   sudo apt-get install xvfb
                                   sudo apt-get install systemd
-                                  sudo systemctl start xvfb.service
+                                  xvfb-run --auto-display tox -v --recreate
                                   export DISPLAY=':99.0'
 
                                                                                            
