--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -32,12 +32,11 @@ jobs:
                                   sudo apt-get install xvfb
                                   sudo apt-get install systemd
                                   
-                                  
-                                  vim xvfb.service
-                                  cp xvfb.service /etc/systemd/system/xvfb.service
-                                  sudo systemctl enable xvfb.service
-                                  sudo systemctl start xvfb.service
-                                  export DISPLAY=':99.0'
+                                  #vim xvfb.service
+                                  #cp xvfb.service /etc/systemd/system/xvfb.service
+                                  #sudo systemctl enable xvfb.service
+                                  #sudo systemctl start xvfb.service
+                                  #export DISPLAY=':99.0'
                                                                                            
                         - uses: actions/checkout@v2
                           with:
