--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -33,7 +33,7 @@ jobs:
                                   sudo apt-get install systemd
                                   
                                   #vim xvfb.service
-                                  #cp xvfb.service /etc/systemd/system/xvfb.service
+                                  cp ./github/workflows/xvfb.service /etc/systemd/system/xvfb.service
                                   #sudo systemctl enable xvfb.service
                                   #sudo systemctl start xvfb.service
                                   #export DISPLAY=':99.0'
