--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -44,8 +44,8 @@ jobs:
                                   sudo apt-get install systemd                                  
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
                                   sudo systemctl enable xvfb.service
-                                  #sudo systemctl start xvfb.service
-                                  #export DISPLAY=':99.0'
+                                  sudo systemctl start xvfb.service
+                                  export DISPLAY=':99.0'
                                   
                                   ./scripts/travis_ci/pull_git_submodules.sh
                                   pip install pipenv
