--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -16,8 +16,8 @@ jobs:
                                 #  env: RUN_FORMATTING_CHECKS
                                 - Name: "Build ARM Executables"
                                   env: RUN_ARM_BUILD
-                                - Name: "Check STM32CubeMX Code Generation"
-                                  env: RUN_CUBE_CODEGEN_CHECKS 
+                                #- Name: "Check STM32CubeMX Code Generation"
+                                #  env: RUN_CUBE_CODEGEN_CHECKS 
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
@@ -43,7 +43,6 @@ jobs:
                                   sudo apt-get install xvfb
                                   sudo apt-get install systemd                                  
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
-                                  sudo systemctl enable xvfb.service
                                   sudo systemctl start xvfb.service
                                   export DISPLAY=':99.0'
                                   
