--- a/.github/workflows/xvfb.service
+++ b/.github/workflows/xvfb.service
@@ -1,9 +1,8 @@
 [Unit]
-Description=Virtual Frame Buffer X Server
+Description=X Virtual Frame Buffer Service
 After=network.target
-
 [Service]
-ExecStart=/usr/bin/Xvfb :42 -screen 0 1024x768x24 -ac +extension GLX +render -noreset
-
+ExecStart=/usr/bin/Xvfb :99 -screen 0 1024x768x24
+Type=simple
 [Install]
 WantedBy=multi-user.target
