--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -50,6 +50,10 @@ jobs:
                                   
                         - name: Install
                           run: |
+                                  export INSTALL_DIR=/usr/local
+                                  export CUBE_INSTALL_DIR=$INSTALL_DIR/STM32CubeMX
+                                  export PYTHONPATH=$PWD
+                                  
                                   pipenv install              
                                   PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
                                   ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
