--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -55,7 +55,7 @@ jobs:
                                   ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
                                   ./scripts/travis_ci/print_bin_versions.sh
                                   ls /usr/local
-                                  ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMx.exe
+                                  ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMX
                           env: 
                                 INSTALL_DIR: /usr/local
                                 CUBE_INSTALL_DIR: /usr/local/STM32CubeMX
