--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -43,6 +43,7 @@ jobs:
                                   sudo apt-get install systemd                                  
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
                                   sudo systemctl start xvfb
+                                  export DISPLAY=:99.0
                                                
                                   ./scripts/travis_ci/pull_git_submodules.sh
                                   pip install pipenv
