--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -42,9 +42,9 @@ jobs:
                                   sudo apt-get install xvfb
                                   sudo apt-get install systemd                                  
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
-                                  sudo systemctl enable xvfb
-                                  sudo systemctl start xvfb
                                   export DISPLAY=:99.0
+                                  sh -e /etc/init.d/xvfb start
+                                  sleep 3
                                                
                                   ./scripts/travis_ci/pull_git_submodules.sh
                                   pip install pipenv
