--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -42,7 +42,7 @@ jobs:
                                   sudo apt-get install xvfb
                                   sudo apt-get install systemd                                  
                                   sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
-                                  export DISPLAY=':99.0'
+                                  export DISPLAY=0.0
                                   Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
                                                
                                   ./scripts/travis_ci/pull_git_submodules.sh
