--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -38,20 +38,27 @@ jobs:
                           with:
                                   python-version: 3.6
                         - name: Before-Install
-                          run: |                  
-                                  sudo apt-get install xvfb
-                                  sudo apt-get install systemd                                  
-                                  sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
-                                  sudo systemctl start xvfb
-                                                                                 
+                          run: |                                              
                                   ./scripts/travis_ci/pull_git_submodules.sh
+                                  
                                   pip install pipenv
+                                  
                                   git lfs pull
                                   
                         - name: Install
-                          run: |                                
-                                  export DISPLAY=99.0
-                                  pipenv install              
+                          run: |   
+                                  sudo apt-get install xvfb
+                                  
+                                  sudo apt-get install systemd      
+                                                              
+                                  sudo cp ./scripts/environment_setup/xvfb.service /etc/systemd/system/xvfb.service
+                                  
+                                  sudo systemctl start xvfb
+                                                               
+                                  DISPLAY=99.0
+                                  
+                                  pipenv install 
+                                               
                                   PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
                                   ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
                                   ./scripts/travis_ci/print_bin_versions.sh
