--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -57,6 +57,8 @@ jobs:
                                                                
                                   export DISPLAY=localhost:99.0
                                   
+                                  sleep 3
+                                  
                                   pipenv install 
                                                
                                   PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
