--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -51,10 +51,12 @@ jobs:
                                   
                         - name: Install
                           run: |                                
-                                  pipenv install              
-                                  PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
+                                  pipenv install     
+                                           
+                                  export PATH=${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:$PATH && 
                                   ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
                                   ./scripts/travis_ci/print_bin_versions.sh
+                                  
                                   ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMX
                           env: 
                                 INSTALL_DIR: /usr/local
