--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -63,3 +63,11 @@ jobs:
                                   ./scripts/travis_ci/travis_script.sh ${{env.CUBE_INSTALL_DIR}}/STM32CubeMX
                           env: 
                                 ${{matrix.env}} : "true"
+                                
+                        - name: Script
+                          run: |                                                                              
+                                  ./scripts/travis_ci/print_bin_versions.sh
+                                  
+                                  ./scripts/travis_ci/travis_script.sh ${{env.CUBE_INSTALL_DIR}}/STM32CubeMX
+                          env: 
+                                ${{matrix.env}} : "true"
