--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -37,6 +37,9 @@ jobs:
                           
                         - name: Install
                           run: |                  
+                                  # Add current directory to the python path
+                                  echo "$PWD" >> $PYTHONPATH
+                                  
                                   # Use xvfb to run programs requiring a GUI (e.g. STM32CubeMX code generation)
                                   sudo apt-get install xvfb
                                   sudo apt-get install systemd              
